# Nexus-Agent

./: .env  .env.local.example  .gitignore  .harnessrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test_agent.py
.harness/: map.md
agent_core/: __init__.py  agency_agents.py  agency_i18n.py  agent.py  approval.py  context_hygiene.py  custom_agents.py  hooks.py  llm.py  mcp_client.py  mcp_manager.py  md_render.py  memory_index.py  model_router.py  orchestrator.py  powers.py  session_store.py  setup_wizard.py  spec.py  steering.py  task_harness.py  token_optimizer.py  tools.py  ui.py  workspace.py
agents/: README.md
commands/: __init__.py  agency_cmds.py  agent_cmds.py  harness_cmds.py  keys_cmds.py  mcp_cmds.py  model_cmds.py  power_cmds.py  session_cmds.py  spawn_cmds.py  spec_cmds.py  steer_cmds.py  task_cmds.py  workspace_cmds.py
config/: hooks.json  mcp_servers.json
docs/: ARCHITECTURE.md
scripts/: seed_harness_metrics.py
server/: __init__.py  app.py  collab.py
skills/: __init__.py  code_runner.py  data_process.py  datetime_skill.py  douyin.py  file_ops.py  http_request.py  news.py  system_info.py  text_process.py  weather.py  web_search.py
specs/: example.md
steering/: README.md  debugging.md  default.md  planning.md  python_style.md  tdd.md
tests/: conftest.py  test_agency_agents.py  test_agent.py  test_approval.py  test_collab.py  test_context_hygiene.py  test_custom_agents.py  test_douyin.py  test_harness_config.py  test_harness_doctor.py  test_harness_layer.py  test_hooks.py  (+24 more)
(+21 files in other folders)
